# str0m-benchmarks

./: .gitignore  Cargo.toml  README.md
.github/workflows/: full-relay-benchmark.yml  idle-drain-callgrind.yml  rx-lookup-cleanup-callgrind.yml
benches/: fanout.rs  full_relay_callgrind.rs  idle_drain_callgrind.rs  rx_lookup_cleanup.rs  rx_lookup_cleanup_callgrind.rs  vp8_rewrite_callgrind.rs
scripts/: run-idle-drain-callgrind.sh  run-rx-lookup-cleanup-bench.sh  run-rx-lookup-cleanup-callgrind.sh  run-stack-bench.sh  run-stack-callgrind.sh  run-stack-memory.sh  run-vp8-rewrite-callgrind.sh  summarize_full_relay.mjs  summarize_idle_drain_callgrind.mjs  summarize_rx_lookup_callgrind.mjs
src/: lib.rs  main.rs
