[package]
edition = "2024"
name = "str0m-benchmarks"
version = "0.1.0"

[features]
arc-payload = []
bytes-payload = ["arc-payload"]

[dependencies]
str0m = { path = "../str0m", default-features = false, features = ["aws-lc-rs"] }

[dev-dependencies]
criterion = { version = "0.8.2", default-features = true }

[[bench]]
harness = false
name = "fanout"
