[package]
edition = "2024"
name = "str0m-benchmarks"
version = "0.1.0"

[features]
arc-payload = []
bytes-payload = ["arc-payload"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
str0m = { git = "https://github.com/algesten/str0m.git", branch = "meta-type", default-features = false, features = ["aws-lc-rs"] }
tikv-jemallocator = { version = "0.6.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", default-features = true }
iai-callgrind = "0.16.1"

[[bench]]
harness = false
name = "fanout"

[[bench]]
harness = false
name = "full_relay_callgrind"
